test/errors/006_div_by_zero.eu
#!/usr/bin/env eu -B
# -*- mode: conf -*-

(l/r):__DIV(l,r)

bomb: 1.0 / 0.0
